--- a/Project_YB2/project.tex
+++ b/Project_YB2/project.tex
@@ -31,7 +31,7 @@
 
 \hyphenation{ionto-pho-re-tic iso-tro-pic fortran} % Specifies custom hyphenation points for words or words that shouldn't be hyphenated at all
 
-\input{Definitionen}
+\input{Definitionen.tex}
 
 %----------------------------------------------------------------------------------------
 
@@ -101,7 +101,7 @@ This Cassini-image taken in August 2009 (Saturn's equinox) shows the outer edge 
 half of the picture) of  Saturn's dense B ring. The direction from the bottom to the top points radially away from Saturn.  This edge 
 -- confined by the 2:1 mean motion resonance of the moon Mimas, the strongest inner resonance acting in the main rings of 
 Saturn --  is dominated by inclined, sheared bright features. They cast long shadows onto the ring plane indicating a stunning 
-vertical extent of a few kilometers  of these remarkable features (Image credit: NASA-JPL).
+vertical extent of a few kilometers of these remarkable features (Image credit: NASA-JPL).
 %
 }
 \label{B_edge_Alpen}
@@ -278,7 +278,8 @@ planet.
 
 \spa
 \section*{B.Table of contents and outline of the thesis with an overview of accomplished (sub-) chapter}
-Please submit your table of contents /outline of your thesis. Please characterize the (sub-)chapter that have already been accomplished. The probability of concluding the project during the funding period  must  be  illustrated.  The awarding committee reserves the right to obtain the stated (sub-) chapter in printed form.
+Please submit your table of contents /outline of your thesis. Please characterize the (sub-)chapter that have already been accomplished. 
+The probability of concluding the project during the funding period  must  be  illustrated.  The awarding committee reserves the right to obtain the stated (sub-) chapter in printed form.
 
 %----------------------------------------------------------------------------------------
 %	Working program and intended completion date
@@ -287,7 +288,11 @@ Please submit your table of contents /outline of your thesis. Please characteriz
 \newpage
 \section*{C. Working program and intended completion date}
 \begin{itemize}
-    \item Working-Program, time schedule (max. 4 pages)Detailed information about your planned approach, especially a thorough explanation of the meth-odology, that you will apply in the completion phase of your  PhD. A time schedule (e. g. in graphic or  tabular  form)  for  the  period  of  funding  should  clearly  demonstrate  the  steps  in  your  research  project that are planned, have already started or are completed. If your PhD includes experiments, please indicate the experiments that have already been conducted and that will still be conducted. The  quality  of  the  research  approach  and  the  characterization  of  the  accomplished  and  planned  steps are of utmost importance.
+    \item Working-Program, time schedule (max. 4 pages)Detailed information about your planned approach, especially a thorough explanation of the meth-odology, 
+	that you will apply in the completion phase of your  PhD. A time schedule (e. g. in graphic or  tabular  form)  for  the  period  of  
+	funding  should  clearly  demonstrate  the  steps  in  your  research  project that are planned, have already started or are completed. 
+	If your PhD includes experiments, please indicate the experiments that have already been conducted and that will still be conducted. 
+	The  quality  of  the  research  approach  and  the  characterization  of  the  accomplished  and  planned  steps are of utmost importance.
     \item Please specify your intended completion date.
 \end{itemize}
 %----------------------------------------------------------------------------------------
